# football-predictor

./: .env.example  .gitignore  .replit  ACTION_PLAN.md  AUDIT.md  GITHUB_SETUP.md  README.md  push_to_github.sh  pyproject.toml  replit.md
aiohttp/: __init__.py
attached_assets/: Pasted--WRONG-Missing-f-string-formatting-url-f-https-RAPIDAPI-HOST-api-v2-predictions-match--1759919322754_1759919322755.txt  Pasted-Bayern-M-nchen-Germany-2034-11-1856-2-Paris-Saint-Germain-France-2024-9-1857-3-Arsenal-En-1759925403545_1759925403546.txt  Pasted-Check-Odds-API-for-BTTS-market-odds-Yes-No-Calculate-BTTS-probability-from-xG-stats-If-both-tea-1760125174971_1760125174989.txt  Pasted-Football-Prediction-RapidAPI-Hub-public-API-Marketplace-Personal-Account-thumbnail-Personal-Acco-1759919578205_1759919578206.txt  Pasted-The-FPL-Elo-Insights-repository-makes-predictions-by-combining-real-world-data-a-classic-rating-sys-1759997943676_1759997943678.txt  Pasted-The-Golden-Rule-of-Value-Betting-You-bet-when-you-believe-the-true-chance-of-an-outcome-is-greater--1760018625059_1760018625059.txt  Pasted-football-data-org-a-RESTful-reliable-and-free-football-data-API-Football-Coverage-Pricing-N-1759919485118_1759919485119.txt  external_audits.md
docs/: CONTRACT_SoT.md
flask_caching/: __init__.py
football_predictor/: README.md  README_EXPORT.md  __init__.py  adaptive_client_demo.py  app.py  app_utils.py  compat.py  config.py  constants.py  elo_client.py  errors.py  football_data_api.py  fotmob_shared.py  github_logo_index.py  gunicorn_config.py  logging_utils.py  logo_resolver.py  start.sh  (+14 more)
(+119 files in other folders)
